about me section dark mode color issue solve

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -16,6 +16,10 @@
     margin-bottom: var(--mb-2);
 }
 
+.text__color {
+    color: var(--title-color);
+}
+
 .about__box {
     background-color: var(--container-color);
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -26,7 +30,7 @@
 
 .about__icon {
     font-size: 1.5rem;
-    color: var(--title-color);
+    
     margin: 0 auto;
     margin-bottom: var(--mb-0-5);
 
