--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ img {
 }
 .section__title {
 font-size: var(--h1-font-size);
-color: rgb(39, 39, 39);
+
 }
 
 .section__subtitle {
